--- a/app/views/objectives/_form.html.erb
+++ b/app/views/objectives/_form.html.erb
@@ -4,7 +4,7 @@
   <div class="form-inputs">
     <%= f.input :title %>
     <%= f.input :description %>
-    <%= f.association :solutions, as: :check_boxes %>
+	  <%= f.association :solutions, as: :select %>
     <%= f.input :prioritized %>
   </div>
 
