--- a/app/views/projects/stage2.html.erb
+++ b/app/views/projects/stage2.html.erb
@@ -26,15 +26,14 @@
 				<div class="tab-content" ng-controller="stage2Ctrl">
 					<div role="tabpanel" class="tab-pane active" id="data">
 						<div class="bg_grey">
-							<button type="button" class="btn btn-warning pull-right" ng-click="edit_real_problem()">Edit</button>
-							<h4>Formulate the real world problem as a goal <i class="fa fa-info-circle" title="The goals are the “big changes and benefits being sougth for women and children, or in services and systems, as a result of advocacy objectives. Goal indicates what will happen after the advocacy objective/s is/are achieved. You should turn the real world problem into the desired real world change you want to contribute to through your advocacy."></i></h4>
-
-							<p>{{problem.description}}</p>
+							<button type="button" class="btn btn-warning pull-right" ng-click="show_goal()">Add</button>
+							<h4>Formulate the real world problem as a goal <i class="fa fa-info-circle" title="The goals are the big changes and benefits being sougth for women and children, or in services and systems, as a result of advocacy objectives. Goal indicates what will happen after the advocacy objective/s is/are achieved. You should turn the real world problem into the desired real world change you want to contribute to through your advocacy."></i></h4>
+							<p>{{problem.goal}}</p>
 						</div>
 						<%= render "real_problem_modal" %>
 						<div class="bg_grey">
 							<button type="button" class="btn btn-warning pull-right" ng-click="add_edit_objective()">Add Objective</button>
-							<button type="button" class="btn btn-warning pull-right">Policy Solutions</button>
+							<button type="button" class="btn btn-warning pull-right" ng-click="list_policy_solutions()">Policy Solutions</button>
 							<h4>Formulate the policy solutions as objectives <i class="fa fa-info-circle" title="The advocacy objectives are what the organization aims to achieve over several years (usually 3-5). It is the overall policy change that is desired as a result of advocacy effort."></i></h4>
 
 							<div class="alert alert-info" role="alert">
@@ -104,6 +103,7 @@
 								</ul>
 							</nav>
 						</div>
+						<%= render "solutions_list_modal" %>
 						<%= render "objective_modal" %>
 					</div>
 					<div role="tabpanel" class="tab-pane" id="explanation">
