--- a/app/views/projects/_goal_modal.html.erb
+++ b/app/views/projects/_goal_modal.html.erb
@@ -5,7 +5,7 @@
 <div class="modal-body">
 	<div class="form-group">
 		<label for="goal">Title</label>
-		<input type="text" name="goal" class="form-control" ng-model="problem.goal" placeholder="Enter a goal for a problem">
+		<textarea name="goal" class="form-control" ng-model="problem.goal" placeholder="Enter a goal for a problem"></textarea>
 	</div>
 </div>
 <div class="modal-footer">
