--- a/app/views/outcomes/stage5.html.erb
+++ b/app/views/outcomes/stage5.html.erb
@@ -20,7 +20,7 @@
 				<div class="tab-content" ng-controller="stage5Ctrl">
 					<div role="tabpanel" class="tab-pane active" id="data">
 				<!-- Actions -->
-					<div class="panel panel-default objectives">
+					<div class="panel panel-default objetives">
 						<div class="panel-heading">
 							<h4 class="panel-title"><a data-toggle="collapse" href="#action1" aria-expanded="false" aria-controls="collapseExample">{{outcomes}}</a></h4>
 						</div>
