correcciones finales stage5

--- a/app/views/outcomes/stage5.html.erb
+++ b/app/views/outcomes/stage5.html.erb
@@ -3,7 +3,8 @@
 		<div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 stage_menu">
 			<h3>What will you do to achieve your advocacy objectives?</h3>
 			<ul class="nav nav-stacked">
-				<li class="active"><a href="#"><i class="fa fa-check-circle"></i> Describe the main actions that will be conducted to the desired change</a></li>
+				<li class="active"><a href="#"><i class="fa fa-check-circle"></i> What actions must we do to achieve this Interim Outcome?</a></li>
+				<li class=""><a href="#"><i class="fa fa-check-circle"></i> How to organize the activities?</a></li>
 			</ul>
 		</div>
 		<div class="col-xs-12 col-sm-12 col-md-9 col-lg-9">
@@ -45,6 +46,15 @@
 						</div>
 						<!-- end of Actions -->
 					</div>
+
+					<div class="bg_grey">
+						<h4>How to organize the activities?</h4>
+						<p>
+							For planning and coordination purposes it is useful to place the activities in Trello.
+						</p>
+						<a href="#" target="_self" class="btn btn-warning"><i class="fa fa-calendar"></i> Organize in Trello</a>
+					</div>
+
 					</div>
 					<!-- end of Actions -->
 					<div role="tabpanel" class="tab-pane" id="explication">
