{{ ask.title }} y {{ ask.description }} según vi en step6_controller.js

--- a/app/views/activities/stage6.html.erb
+++ b/app/views/activities/stage6.html.erb
@@ -34,8 +34,8 @@
 											<th class="text-right">Actions</th>
 										</tr>
 										<tr ng-repeat="solution in policy.solutions">
-											<td>{{ ask.actor }}</td>
-											<td>{{ ask.ask }}</td>
+											<td>{{ ask.description }}</td>
+											<td>{{ ask.title }}</td>
 											<td  class="text-right">
 												<i class="fa fa-pencil-square-o" ng-click="add_edit_ask()"></i>
 												<i class="fa fa-trash" ng-click="delete_ask()"></i>
