#325 y lo mismos para sandboxes
My sandboxes / Public sandboxes

--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -11,10 +11,10 @@
 <div role="tabpanel">
   <ul class="nav nav-tabs" role="tablist">
     <li role="presentation" class="active">
-      <a href="#private" aria-controls="private" role="tab" data-toggle="tab">Private</a>
+      <a href="#private" aria-controls="private" role="tab" data-toggle="tab">My projects</a>
     </li>
     <li role="presentation">
-      <a href="#public" aria-controls="public" role="tab" data-toggle="tab">Public</a>
+      <a href="#public" aria-controls="public" role="tab" data-toggle="tab">Other projects</a>
     </li>
   </ul>
 
