--- a/app/views/activities/index.html.erb
+++ b/app/views/activities/index.html.erb
@@ -14,9 +14,9 @@
       <tr>
         <td><%= activity.title %></td>
         <td><%= activity.description %></td>
-        <td><%= link_to 'Show', activity %></td>
-        <td><%= link_to 'Edit', edit_activity_path(activity) %></td>
-        <td><%= link_to 'Destroy', activity, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Show', [@project, activity] %></td>
+        <td><%= link_to 'Edit', edit_project_activity_path(@project, activity) %></td>
+        <td><%= link_to 'Destroy', [@project, activity], method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
@@ -24,4 +24,4 @@
 
 <br>
 
-<%= link_to 'New Activity', new_activity_path %>
+<%= link_to 'New Activity', new_project_activity_path(@project) %>
