--- a/app/views/projects/_private.html.erb
+++ b/app/views/projects/_private.html.erb
@@ -11,11 +11,11 @@
 		<tr>
 			<td><%= link_to p.title, p %></td>
 			<td><%= truncate p.description, length: 140 %></td>
-			<td class="actions">
+			<td class="actions text-right">
 				<ul class="list-inline">
 					<li>
 						<%= link_to edit_project_path(p) do %>
-							<i class="fa fa-edit" title="Edit"></i>
+							<i class="fa fa-cog" title="Edit"></i>
 						<% end %>
 					</li>
 					<li>
