--- a/app/views/projects/_solutions_list_modal.html.erb
+++ b/app/views/projects/_solutions_list_modal.html.erb
@@ -11,7 +11,7 @@
 			</tr>
 		</thead>
 		<tbody>
-			<tr ng-repeat="solution in solutions">
+			<tr ng-repeat="solution in solutions" ng-class="{danger: solution.objective_ids.length<1}">
 				<td>{{ solution.title }}</td>
 				<td>{{ solution.description | limitTo:500 }}...</td>
 			</tr>
