cambio etiqueta Other sandboxes

--- a/app/views/projects/_private.html.erb
+++ b/app/views/projects/_private.html.erb
@@ -19,7 +19,7 @@
 						<% end %>
 					</li>
 					<li>
-						<a href="#"><i class="fa fa-home" title="Vist Home"></i></a>
+						<a href="#"><i class="fa fa-eye" title="Only See Project"></i></a>
 					</li>
 					<li>
 						<a href="#"><i class="fa fa-copy" title="Clone"></i></a>
