--- a/app/views/sandboxes/index.html.erb
+++ b/app/views/sandboxes/index.html.erb
@@ -11,7 +11,7 @@
       <a href="#private" aria-controls="private" role="tab" data-toggle="tab">My Sandboxes</a>
     </li>
     <li role="presentation">
-      <a href="#public" aria-controls="public" role="tab" data-toggle="tab">Public Sandboxes</a>
+      <a href="#public" aria-controls="public" role="tab" data-toggle="tab">Other Sandboxes</a>
     </li>
   </ul>
   <div class="tab-content">
