--- a/app/views/activities/show.html.erb
+++ b/app/views/activities/show.html.erb
@@ -14,7 +14,7 @@
   <strong>Outcomes:</strong>
   <ul>
     <% @activity.outcomes.each do |outcome| %>
-      <li><%= link_to outcome.title, objective_outcome_path(outcome.objective, outcome) %></li>
+      <li><%= link_to outcome.title, project_objective_outcome_path(@project, outcome.objective, outcome) %></li>
     <% end %>
   </ul>
 </p>
