--- a/app/views/outcomes/stage5.html.erb
+++ b/app/views/outcomes/stage5.html.erb
@@ -14,7 +14,7 @@
 				<!-- Nav tabs -->
 				<ul class="nav nav-tabs" role="tablist">
 					<li role="presentation" class="active"><a href="#data" aria-controls="data" role="tab" data-toggle="tab">Data Entry</a></li>
-					<li role="presentation"><a href="#explication" aria-controls="explication" role="tab" data-toggle="tab">Explanation & Examples</a></li>
+					<li role="presentation"><a href="#explanation" aria-controls="explanation" role="tab" data-toggle="tab">Explanation & Examples</a></li>
 					<li role="presentation"><a href="#tips" aria-controls="tips" role="tab" data-toggle="tab">Workshop Tips</a></li>
 				</ul>
 				<!-- Tab panes -->
@@ -23,26 +23,28 @@
 				<!-- Actions -->
 					<div class="panel panel-default objetives">
 						<div class="panel-heading">
-							<h4 class="panel-title"><a data-toggle="collapse" href="#action1" aria-expanded="false" aria-controls="collapseExample">{{outcomes}}</a></h4>
+							<h4 class="panel-title"><a data-toggle="collapse" href="#action1" aria-expanded="false" aria-controls="collapseExample">{{outcome.title}}</a></h4>
 						</div>
 						<!-- policy solutions -->
 						<div class="collapse in" id="action1">
-							<button type="button" class="btn btn-info pull-right" ng-click="">Add</button>
+							<button type="button" class="btn btn-info pull-right" ng-click="add_edit_activity()">Add</button>
 							<h4>What actions must we do to achieve this Interim Outcome? <span ng-if="policy.solutions"><i class="fa fa-info-circle" title="Describe the main actions that will be conducted to the desired change"></i></span></h4>
 							<p ng-if="">
 								Describe the main actions that will be conducted to the desired change
 							</p>
 							<table class="table">
 								<tbody>
-									<tr ng-repeat="outcome in outcomes">
-										<td>{{outcome}}</td>
+									<tr ng-repeat="activity in activities">
+										<td>{{activity.title}}</td>
 										<td>
-											<i class="fa fa-pencil-square-o" ng-click="add_edit_solution(policy.id, solution.id)"></i>
+											<i class="fa fa-pencil-square-o" ng-click="add_edit_activity(activity)"></i>
 											<i class="fa fa-trash" ng-click="delete_solution(problem.id, policy.id, solution)"></i>
 										</td>
 									</tr>
 								</tbody>
 							</table>
+
+							<%= render 'modal_activity' %>
 						</div>
 						<!-- end of Actions -->
 					</div>
@@ -57,8 +59,11 @@
 
 					</div>
 					<!-- end of Actions -->
-					<div role="tabpanel" class="tab-pane" id="explication">
+					<div role="tabpanel" class="tab-pane" id="explanation">
 					<%= render 'explanation_stage5' %>
+					</div>
+					<div role="tabpanel" class="tab-pane" id="tips">
+						tips
 					</div>
 				</div>
 			</div>
