updated stage 6 views; closes #364

--- a/app/views/activities/stage6.html.erb
+++ b/app/views/activities/stage6.html.erb
@@ -1,85 +1,57 @@
 <div class="container main">
-	<div class="row">
-		<div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 stage_menu">
-			<h3>What do you want the target audience to do?</h3>
-			<ul class="nav nav-stacked">
-				<li class="active"><a href="#"><i class="fa fa-check-circle"></i> What will the ask for each actor?</a></li>
-			</ul>
-		</div>
-		<div class="col-xs-12 col-sm-12 col-md-9 col-lg-9">
-			<h2>What do you want the target audience to do?</h2>
-			<p>Your advocacy strategy should describe the main actions that will be conducted in order to contribute to the desired change (interim outcome and advocacy objective). The types of actions are numerous and each action can contribute to different outcomes.</p>
-			<div role="tabpanel" class="tabpanel">
-				<!-- Nav tabs -->
-				<ul class="nav nav-tabs" role="tablist">
-					<li role="presentation" class="active"><a href="#data" aria-controls="data" role="tab" data-toggle="tab">Data Entry</a></li>
-					<li role="presentation"><a href="#explication" aria-controls="explication" role="tab" data-toggle="tab">Explanation & Examples</a></li>
-					<li role="presentation"><a href="#tips" aria-controls="tips" role="tab" data-toggle="tab">Workshop Tips</a></li>
-				</ul>
-				<!-- Tab panes -->
-				<div class="tab-content" ng-controller="stage5Ctrl">
-					<div role="tabpanel" class="tab-pane active" id="data">
-				<!-- Actions -->
-					<div class="bg_grey">
-						<button type="button" class="btn btn-info pull-right" ng-click="add_edit_ask()">Add</button>
-						<h4>What will the ask for each actor?</h4>
-						<p>
-							The Ask should be clear, concise, solution-focused, and tailored to each actor.
-						</p>
-						<table class="table">
-									<tbody>
-										<tr>
-											<th>Actor</th>
-											<th>Ask</th>
-											<th class="text-right">Actions</th>
-										</tr>
-										<tr ng-repeat="solution in policy.solutions">
-											<td>{{ ask.description }}</td>
-											<td>{{ ask.title }}</td>
-											<td  class="text-right">
-												<i class="fa fa-pencil-square-o" ng-click="add_edit_ask()"></i>
-												<i class="fa fa-trash" ng-click="delete_ask()"></i>
-											</td>
-										</tr>
-									</tbody>
-								</table>
-					</div>
-					<script type="text/ng-template" id="add-ask.html">
-		                <div class="modal-header">
-		                  <h3 class="modal-title">Ask</h3>
-		                </div>
-		                <div class="modal-body">
-		                  <form>
-		                    <div class="form-group">
-					            <label for="target-audience">Actor</label>
-					            <select class="form-control" id="target-audience">
-					              <option>Select Target Audience</option>
-					              <option>Minister of Health</option>
-					              <option>Members of Parliament</option>
-					              <option>Director of the Department</option>
-					              <option>INGO “X”</option>
-					              <option>UN Agencies</option>
-					            </select>
-					          </div>
-					          <div class="form-group">
-					            <label for="ask">Ask</label>
-					            <textarea class="form-control" rows="3" id="ask" placeholder="Write Ask"></textarea>
-					          </div>
-		                  </form>
-		                </div>
-		                <div class="modal-footer">
-		                  <button class="btn btn-primary" ng-click="save($event)">Save</button>
-		                  <button class="btn btn-warning" ng-click="cancel($event)">Cancel</button>
-		                </div>
-		            </script>
-
-					</div>
-					<!-- end of Actions -->
-					<div role="tabpanel" class="tab-pane" id="explication">
-					<%= render 'explanation_stage6' %>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
+  <div class="row">
+    <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 stage_menu">
+      <h3>What do you want the target audience to do?</h3>
+      <ul class="nav nav-stacked">
+        <li class="active"><a href="#"><i class="fa fa-check-circle"></i> What will the ask for each actor?</a></li>
+      </ul>
+    </div>
+    <div class="col-xs-12 col-sm-12 col-md-9 col-lg-9">
+      <h2>What do you want the target audience to do?</h2>
+      <p>Your advocacy strategy should describe the main actions that will be conducted in order to contribute to the desired change (interim outcome and advocacy objective). The types of actions are numerous and each action can contribute to different outcomes.</p>
+      <div role="tabpanel" class="tabpanel">
+        <!-- nav tabs -->
+        <ul class="nav nav-tabs" role="tablist">
+          <li role="presentation" class="active"><a href="#data" aria-controls="data" role="tab" data-toggle="tab">Data Entry</a></li>
+          <li role="presentation"><a href="#explication" aria-controls="explication" role="tab" data-toggle="tab">Explanation & Examples</a></li>
+          <li role="presentation"><a href="#tips" aria-controls="tips" role="tab" data-toggle="tab">Workshop Tips</a></li>
+        </ul>
+        <!-- tab panel -->
+        <div class="tab-content" ng-controller="stage6Ctrl">
+          <div role="tabpanel" class="tab-pane active" id="data">
+        <!-- actions -->
+          <div class="bg_grey">
+            <button type="button" class="btn btn-info pull-right" ng-click="add_edit_ask()">Add</button>
+            <h4>What will the ask for each actor?</h4>
+            <p>
+              The Ask should be clear, concise, solution-focused, and tailored to each actor.
+            </p>
+            <table class="table">
+              <tbody>
+                <tr>
+                  <th>Actor</th>
+                  <th>Ask</th>
+                  <th class="text-right">Actions</th>
+                </tr>
+                <tr ng-repeat="solution in policy.solutions">
+                  <td>{{ ask.actor }}</td>
+                  <td>{{ ask.description }}</td>
+                  <td  class="text-right">
+                    <i class="fa fa-pencil-square-o" ng-click="add_edit_ask()"></i>
+                    <i class="fa fa-trash" ng-click="delete_ask()"></i>
+                  </td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
+          <%= render "asks_modal" %>
+          </div>
+          <!-- end of actions -->
+          <div role="tabpanel" class="tab-pane" id="explication">
+            <%= render 'explanation_stage6' %>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
