Fixed stage4 template bug

--- a/app/views/objectives/stage4.html.erb
+++ b/app/views/objectives/stage4.html.erb
@@ -64,7 +64,7 @@
             <%= render "outcome_modal" %>
           </div>
           <div role="tabpanel" class="tab-pane" id="explication">
-            <%= render "explanation" %>
+            <%= render "explanation_stage4" %>
           </div>
         </div>
       </div>
