--- a/app/views/activities/_asks_modal.html.erb
+++ b/app/views/activities/_asks_modal.html.erb
@@ -6,8 +6,7 @@
     <form>
       <div class="form-group">
         <label for="target-audience">Actor</label>
-        <select name="actor" ng-model="current_ask.actor">
-          <option ng-repeat="actor in actors">{{ actor['name'] }}</option>
+        <select name="actor" ng-options="actor.id as actor.name for actor in actors" ng-model="current_ask.actor_id">
         </select>
       </div>
       <div class="form-group">
