--- a/app/views/activities/stage6.html.erb
+++ b/app/views/activities/stage6.html.erb
@@ -27,19 +27,18 @@
               The Ask should be clear, concise, solution-focused, and tailored to each actor.
             </p>
             <table class="table">
-              <tbody>
+              <thead>
                 <tr>
                   <th>Actor</th>
                   <th>Ask</th>
                   <th class="text-right">Actions</th>
                 </tr>
-                <tr ng-repeat="solution in policy.solutions">
-                  <td>{{ ask.actor }}</td>
+              </thead>
+              <tbody>
+                <tr ng-repeat="ask in asks">
+                  <td>{{ ask.actor_name }}</td>
                   <td>{{ ask.description }}</td>
-                  <td  class="text-right">
-                    <i class="fa fa-pencil-square-o" ng-click="add_edit_ask()"></i>
-                    <i class="fa fa-trash" ng-click="delete_ask()"></i>
-                  </td>
+                  <td class="text-right"><a href="#" title="Edit" ng-click="add_edit_ask(ask)"><i class="fa fa-pencil-square-o"></i></a> <a href="#" title="Delete" ng-click="delete_ask(ask)"><i class="fa fa-trash"></i></a></td>
                 </tr>
               </tbody>
             </table>
