--- a/app/views/projects/stage1.html.erb
+++ b/app/views/projects/stage1.html.erb
@@ -21,7 +21,7 @@
 				<!-- Tab panes -->
 				<div class="tab-content" ng-controller="stage1Ctrl">
 					<div role="tabpanel" class="tab-pane active" id="data">
-						<div class="bg_grey">
+						<div class="bg_grey" id='real-problem'>
 							<!-- <button type="button" class="btn btn-warning pull-right">Edit</button> -->
 							<button type="button" class="btn pull-right" ng-class="{'btn-warning': problem.id, 'btn-info': !problem.id}" ng-click="add_step_one(problem)">{{ btn_problem }}</button>
 							<h4>Which real-world problem children are facing that you want to address? <span ng-if="problem.id"><i class="fa fa-info-circle" title="A real-world problem is the negative situation children face that UNICEF would like to change (malnutrition, child poverty, infant mortality, disparities in education, etc). At the early stages of the planning process you should identify and articulate the real-world problem you want to address. The problem should be described as precisely and concretely as possible. For instance, whenever is possible, it should include the geographical scope, a time period, and population affected (see example below)"></i></span></h4>
@@ -31,16 +31,18 @@
 							<span ng-if="problem.id">
 								<p class="bold">Problem</p>
 								<p>{{ problem.title }}</p>
-								<p class="bold">Explanation</p>
+								<p class="bold">Description</p>
 								<p>{{ problem.description }}</p>
 								<p class="bold">Focus Area</p>
 								<p>{{ problem.focus_area }}</p>
 							</span>
 							<%= render "real_problem_modal" %>
 						</div>
-						<div class="bg_grey" ng-if="problem.id">
-							<button type="button" class="btn btn-warning pull-right" ng-click="add_edit_policy()">Add</button>
-							<h4>Which are the policy-related causes of the real-world problem? <span ng-if="policies"><i class="fa fa-info-circle" title="Behind the real-world problems there are usually multiple causes, including causes related to programmes, to bad practices or to the policymaking environment. Advocacy work focuses specifically on the latest and often refers to causes such as deficient governance mechanisms, inadequate legal framework or imbalanced power relationships. Therefore, your problem analysis should prioritize the identification of these causes rather than all the factors behind the real-world problem"></i></span></h4>
+						<div id="policy-problems">
+							<div class="bg_grey" ng-if="problem.id">
+									<button type="button" class="btn btn-warning pull-right" ng-click="add_edit_policy()">Add</button>
+									<h4>Which are the policy-related causes of the real-world problem? <span ng-if="policies"><i class="fa fa-info-circle" title="Behind the real-world problems there are usually multiple causes, including causes related to programmes, to bad practices or to the policymaking environment. Advocacy work focuses specifically on the latest and often refers to causes such as deficient governance mechanisms, inadequate legal framework or imbalanced power relationships. Therefore, your problem analysis should prioritize the identification of these causes rather than all the factors behind the real-world problem"></i></span></h4>
+							</div>
 						</div>
 						<p ng-if="!policies">
 							Behind the real-world problems there are usually multiple causes, including causes related to programmes, to bad practices or to the policymaking environment. Advocacy work focuses specifically on the latest and often refers to causes such as deficient governance mechanisms, inadequate legal framework or imbalanced power relationships. Therefore, your problem analysis should prioritize the identification of these causes rather than all the factors behind the real-world problem
@@ -76,19 +78,6 @@
 						<%= render 'policy_modal' %>
 						<!-- solution modal -->
 						<%= render 'solution_modal' %>
-						<!--
-						<div class="panel panel-default objetives">
-								<div class="panel-heading">
-									<button type="button" class="btn btn-warning pull-right">Edit</button>
-									<h4 class="panel-title"><a data-toggle="collapse" href="#objetive2" aria-expanded="false" aria-controls="collapseExample">PMTCT not included as a priority in the National Strategic Plan (few resources to improve services, campaigns, etc.)- Few donors paying attention to it</a></h4>
-								</div>
-								<div class="collapse in" id="objetive2">
-									<button type="button" class="btn btn-info pull-right">Add</button>
-									<h4>Which policy solutions would constitute an appropriate response?</h4>
-									<p>What are the main policy solutions that would resolve the problems identified and that UNICEF would like to see adopted?</p>
-								</div>
-						</div>
-						-->
 					</div>
 					<div role="tabpanel" class="tab-pane" id="explication">
 						<%= render 'explanation' %>
