Changed explication for explanation

--- a/app/views/projects/stage1.html.erb
+++ b/app/views/projects/stage1.html.erb
@@ -15,7 +15,7 @@
 				<!-- Nav tabs -->
 				<ul class="nav nav-tabs" role="tablist">
 					<li role="presentation" class="active"><a href="#data" aria-controls="data" role="tab" data-toggle="tab">Data Entry</a></li>
-					<li role="presentation"><a href="#explication" aria-controls="explication" role="tab" data-toggle="tab">Explanation & Examples</a></li>
+					<li role="presentation"><a href="#explanation" aria-controls="explanation" role="tab" data-toggle="tab">Explanation & Examples</a></li>
 					<li role="presentation"><a href="#tips" aria-controls="tips" role="tab" data-toggle="tab">Workshop Tips</a></li>
 				</ul>
 				<!-- Tab panes -->
@@ -79,10 +79,10 @@
 						<!-- solution modal -->
 						<%= render 'solution_modal' %>
 					</div>
-					<div role="tabpanel" class="tab-pane" id="explication">
+					<div role="tabpanel" class="tab-pane" id="explanation">
 						<%= render 'explanation' %>
 					</div>
-                    <div role="tabpanel" class="tab-pane" id="explication">workshop tips</div>
+                    <div role="tabpanel" class="tab-pane" id="explanation">workshop tips</div>
 				</div>
 			</div>
 		</div>
