--- a/app/views/activities/stage6.html.erb
+++ b/app/views/activities/stage6.html.erb
@@ -13,7 +13,7 @@
         <!-- nav tabs -->
         <ul class="nav nav-tabs" role="tablist">
           <li role="presentation" class="active"><a href="#data" aria-controls="data" role="tab" data-toggle="tab">Data Entry</a></li>
-          <li role="presentation"><a href="#explication" aria-controls="explication" role="tab" data-toggle="tab">Explanation & Examples</a></li>
+          <li role="presentation"><a href="#explanation" aria-controls="explanation" role="tab" data-toggle="tab">Explanation & Examples</a></li>
           <li role="presentation"><a href="#tips" aria-controls="tips" role="tab" data-toggle="tab">Workshop Tips</a></li>
         </ul>
         <!-- tab panel -->
@@ -46,7 +46,7 @@
           <%= render "asks_modal" %>
           </div>
           <!-- end of actions -->
-          <div role="tabpanel" class="tab-pane" id="explication">
+          <div role="tabpanel" class="tab-pane" id="explanation">
             <%= render 'explanation_stage6' %>
           </div>
         </div>
