--- a/app/views/objectives/stage4.html.erb
+++ b/app/views/objectives/stage4.html.erb
@@ -13,7 +13,7 @@
         <!-- Nav tabs -->
         <ul class="nav nav-tabs" role="tablist">
           <li role="presentation" class="active"><a href="#data" aria-controls="data" role="tab" data-toggle="tab">Data Entry</a></li>
-          <li role="presentation"><a href="#explication" aria-controls="explication" role="tab" data-toggle="tab">Explication & Examples</a></li>
+          <li role="presentation"><a href="#explanation" aria-controls="explanation" role="tab" data-toggle="tab">Explanation & Examples</a></li>
         </ul>
         <!-- Tab panes -->
         <div class="tab-content" ng-controller="stage4Ctrl">
@@ -63,7 +63,7 @@
             </div>
             <%= render "outcome_modal" %>
           </div>
-          <div role="tabpanel" class="tab-pane" id="explication">
+          <div role="tabpanel" class="tab-pane" id="explanation">
             <%= render "explanation_stage4" %>
           </div>
         </div>
