--- a/app/assets/stylesheets/projects.css.scss
+++ b/app/assets/stylesheets/projects.css.scss
@@ -2,30 +2,34 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 .actions {
-	min-width: 160px;
-	a {
-		margin-left: 10px;
-	}
+  min-width: 160px;
+  a {
+    margin-left: 10px;
+  }
 }
 
 #private_projects_filter {
-	input {
-		margin-left: 15px;
-	}
+  input {
+    margin-left: 15px;
+  }
 }
 
 .footer-project-table {
-	text-align: center;
-	.paging_simple_numbers {
-		a {
-			padding: 0px 5px;
-		}
-		span {
-			font-weight: bold;
-		}
-	}
+  text-align: center;
+  .paging_simple_numbers {
+    a {
+      padding: 0px 5px;
+    }
+    span {
+      font-weight: bold;
+    }
+  }
+}
+
+.form-control.textarea-200 {
+  height: 200px;
 }
 
 .form-control.textarea-400 {
-	height: 400px;
+  height: 400px;
 }
