--- a/app/views/projects/stage2.html.erb
+++ b/app/views/projects/stage2.html.erb
@@ -59,7 +59,7 @@
 										<th>Total</th>
 										<th>Prioritized</th>
 										<th>Policy Solutions</th>
-										<th>Actions</th>
+										<th class="text-right">Actions</th>
 									</tr>
 								</thead>
 								<tbody>
@@ -73,7 +73,7 @@
 											<i class="fa fa-check" ng-if="objective.prioritized"></i>
 										</td>
 										<td class="text-center">{{objective.solution_ids.length}}</td>
-										<td class="text-center"><a href="#" title="Edit" ng-click="add_edit_objective(objective)"><i class="fa fa-pencil-square-o"></i></a> <a href="#" title="Delete" ng-click="delete_objective(objective)"><i class="fa fa-trash"></i></a>
+										<td class="text-right"><a href="#" title="Edit" ng-click="add_edit_objective(objective)"><i class="fa fa-pencil-square-o"></i></a> <a href="#" title="Delete" ng-click="delete_objective(objective)"><i class="fa fa-trash"></i></a>
 										</td>
 									</tr>
 								</tbody>
