td action alinear a la derecha

--- a/app/views/objectives/stage4.html.erb
+++ b/app/views/objectives/stage4.html.erb
@@ -28,7 +28,7 @@
                     <th>Interim Outcome Type</th>
                     <th>Actor Type</th>
                     <th>Activities Number</th>
-                    <th class="text-center">Actions</th>
+                    <th class="text-right">Actions</th>
                   </tr>
                 </thead>
                 <tbody>
@@ -37,7 +37,7 @@
                     <td>{{outcome.outcome_type_id}}</td>
                     <td>{{outcome.actor_type_id}}</td>
                     <td></td>
-                    <td class="text-center"><a href="#" title="Edit" ng-click="add_edit_outcome(outcome)"><i class="fa fa-pencil-square-o"></i></a> <a href="#" title="Delete" ng-click="delete_outcome(outcome)"><i class="fa fa-trash"></i></a></td>
+                    <td class="text-right"><a href="#" title="Edit" ng-click="add_edit_outcome(outcome)"><i class="fa fa-pencil-square-o"></i></a> <a href="#" title="Delete" ng-click="delete_outcome(outcome)"><i class="fa fa-trash"></i></a></td>
                   </tr>
                 </tbody>
               </table>
