--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -119,6 +119,10 @@ table a {
 .nav .open > a, .nav .open > a:hover, .nav .open > a:focus {
   background-color: #2dc8c2;
 }
+.nav.nav-stacked > li > a:hover, .nav > li > a:focus {
+  background-color: #F3F3F3;
+  text-decoration: underline;
+}
 .breadcrumb {
   padding: 15px;
   font-size: 16px;
