--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -14,6 +14,13 @@ h2, .h2 {
 .tab-pane li {
   margin-bottom: 15px;
 }
+input, button, select, textarea {
+  font-family: 'Open Sans', sans-serif;
+  color: #7f8c8c;
+}
+select {
+  padding: 5px;
+}
 .btn {
   text-transform: uppercase;
 }
@@ -312,4 +319,13 @@ div#resources_paginate {
 }
 .btn.pull-right {
   margin-left: 5px;
+}
+.modal-footer .btn-primary {
+  background-color: #FF635A;
+  border-color: #FF4F4A;
+}
+.modal-footer .btn-warning {
+  color: #333;
+  background-color: #DBDBDB;
+  border-color: #CCC;
 }
