--- a/app/views/projects/stage1.html.erb
+++ b/app/views/projects/stage1.html.erb
@@ -66,8 +66,8 @@
 										<tr ng-repeat="solution in policy.solutions">
 											<td>{{ solution.title }}</td>
 											<td class="text-right">
-												<i class="fa fa-pencil-square-o" ng-click="add_edit_solution(policy.id, solution.id)"></i>
-												<i class="fa fa-trash" ng-click="delete_solution(problem.id, policy.id, solution)"></i>
+												<i class="fa fa-pencil-square-o" ng-click="add_edit_solution(policy.id, solution.id)" title="Edit"></i>
+												<i class="fa fa-trash" ng-click="delete_solution(problem.id, policy.id, solution)" title="Delete"></i>
 											</td>
 										</tr>
 									</tbody>
