table class in Explanation Stage5

--- a/app/views/outcomes/_explanation_stage5.html.erb
+++ b/app/views/outcomes/_explanation_stage5.html.erb
@@ -2,7 +2,7 @@
 <hr>
 <h4>What will you do to achieve your advocacy objectives?</h4>
 <p>Your advocacy strategy should describe the main actions that will be conducted in order to contribute to the desired change (interim outcome and advocacy objective). The types of actions are numerous and each action can contribute to different outcomes.</p>
-<table>
+<table class="table">
 	<tr>
 		<th>Outcome</th>
 		<th>Examples of activities usually associated with the outcome</th>
@@ -108,7 +108,7 @@
 <hr>
 <h4>Activities</h4>
 
-<table>
+<table class="table">
 	<tr>
 		<th>Interim outcome</th>
 		<th>Main activities</th>
@@ -180,7 +180,7 @@
 	</tr>
 </table>
 
-<table>
+<table class="table">
 	<tr>
 		<th>Month</th>
 		<th>April</th>
